--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <ul>
             <li><a href="#">Home</a></li>
             <li class="dropdown">
-                <a href="#">Services ▼</a>
+                <a href="#">Services <span class="arrow">▼</span></a> <!-- CHANGED -->
                 <ul class="dropdown-menu">
                     <li><a href="#">Web Design</a></li>
                     <li><a href="#">App Development</a></li>
